# aoc2021

./: Cargo.toml
examples/: day1.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/: utils.rs
