[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Ben Wallis <atomyc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
griditer = "0.1.0"

[profile.dev]
opt-level = 0               # Use slightly better optimizations.
debug = true